# gwair

./: Cargo.toml
resources/blueprints/: main.kdl
src/: controls.rs  fabctx.rs  geom.rs  gfx.rs  main.rs  resources.rs
src/ecm/: actions.rs  mod.rs
src/ecm/component/: gfx.rs  mod.rs  phys.rs  player.rs  swinging.rs
src/ecm/component/player/: stats.rs  swinging.rs
src/ecm/message/: mod.rs
src/ecm/resource/: camera.rs  mod.rs  phys.rs  player.rs
src/states/: mod.rs
src/states/gameplay/: mod.rs  update.rs
