[package]
name = "gwair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palkia = "0.9.6"
dialga = "0.4.1"
knurdy = "0.1.2"
gerrymander = "0.1.0"
puppetmaster = "0.1.0"
wicker = "0.2.0"

aglet = "0.4.0"
ahash = { version = "0.8.2", features = ["serde"] }
bitflags = "1.3.2"
broccoli = "6.0.2"
eyre = "0.6.8"
glam = { version = "^0.21", features = ["serde"] }
itertools = "0.10.5"
kdl = "4.6.0"
macroquad = "0.3.25"
serde = "1.0.152"
smol_str = "0.1.23"

[profile.dev]
opt-level = 1

[profile.dev.package.'*']
opt-level = 3
debug-assertions = false
